--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
-<style>
+<html lang="zh-CN">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&family=Noto+Sans+SC&display=swap" rel="stylesheet">
+    <style>
     html, body {
+        font-family: 'Noto Sans SC', sans-serif;
         width: 100%;
         margin: 0;
     }
@@ -83,12 +91,20 @@
         margin: 30px 0;
     }
 
-    .tips, .example {
+    .example {
+        font-family: 'Noto Sans Mono', monospace;
         color: #7b7b7b;
         position: relative;
         align-self: flex-start;
         margin-left: 7.5em;
     }
+    
+    .tips {
+        color: #7b7b7b;
+        position: relative;
+        align-self: flex-start;
+        margin-left: 7.5em;
+      }
 
     .tips > p:first-child::before {
         position: absolute;
@@ -103,16 +119,12 @@
         content: '合法输入示例：';
         color: #7b7b7b
     }
-</style>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    </style>
     <script>
         function toSubmit(e) {
-            e.preventDefault()
+            e.preventDefault();
             window.open(location.href.substr(0, location.href.lastIndexOf('/') + 1) + document.getElementsByName('q')[0].value);
-            return false
+            return false;
         }
     </script>
     <title>GitHub 文件加速</title>
