--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&family=Noto+Sans+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC&display=swap" rel="stylesheet">
     <style>
     html, body {
         font-family: 'Noto Sans SC', sans-serif;
@@ -91,20 +91,12 @@
         margin: 30px 0;
     }
 
-    .example {
-        font-family: 'Noto Sans Mono', monospace;
+    .tips, .example {
         color: #7b7b7b;
         position: relative;
         align-self: flex-start;
         margin-left: 7.5em;
     }
-    
-    .tips {
-        color: #7b7b7b;
-        position: relative;
-        align-self: flex-start;
-        margin-left: 7.5em;
-      }
 
     .tips > p:first-child::before {
         position: absolute;
